--- a/Lecture_i_Basic_Knowledge/Lecture_i_Basic_Knowledge.html
+++ b/Lecture_i_Basic_Knowledge/Lecture_i_Basic_Knowledge.html
@@ -312,9 +312,12 @@
         controls: true,
         progress: true,
         history: true,
-        center: true,
-        transition: 'default', // none/fade/slide/convex/concave/zoom
-        slideNumber: true,
+        center: false,
+        width: 1000,
+        pdfSeparateFragments: false,
+        transition: 'slide',
+        transitionSpeed: 'fast',
+        slideNumber: "c/t",
         highlight: {
           highlightOnLoad: false
         },
