--- a/Lecture_02_Python_Intro/Lecture_02_Python_Intro.html
+++ b/Lecture_02_Python_Intro/Lecture_02_Python_Intro.html
@@ -489,9 +489,12 @@ x = 123 + 456 - (y * 5) ** 2
         controls: true,
         progress: true,
         history: true,
-        center: true,
-        transition: 'default', // none/fade/slide/convex/concave/zoom
-        slideNumber: true,
+        center: false,
+        width: 1000,
+        pdfSeparateFragments: false,
+        transition: 'slide',
+        transitionSpeed: 'fast',
+        slideNumber: "c/t",
         highlight: {
           highlightOnLoad: false
         },
