--- a/Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.html
+++ b/Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.html
@@ -883,9 +883,12 @@ Python 的布尔运算符就能够这样“偷懒”。
         controls: true,
         progress: true,
         history: true,
-        center: true,
-        transition: 'default', // none/fade/slide/convex/concave/zoom
-        slideNumber: true,
+        center: false,
+        width: 1000,
+        pdfSeparateFragments: false,
+        transition: 'slide',
+        transitionSpeed: 'fast',
+        slideNumber: "c/t",
         highlight: {
           highlightOnLoad: false
         },
