--- a/Lecture_05_Control_Flow/index.html
+++ b/Lecture_05_Control_Flow/index.html
@@ -923,9 +923,12 @@ my_info = { # 这里用了一个比较美观的换行写法，适用于长文本
         controls: true,
         progress: true,
         history: true,
-        center: true,
-        transition: 'default', // none/fade/slide/convex/concave/zoom
-        slideNumber: true,
+        center: false,
+        width: 1000,
+        pdfSeparateFragments: false,
+        transition: 'slide',
+        transitionSpeed: 'fast',
+        slideNumber: "c/t",
         highlight: {
           highlightOnLoad: false
         },
