--- a/Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.html
+++ b/Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.html
@@ -573,9 +573,12 @@ def calculate_area(shape, *dimensions):
         controls: true,
         progress: true,
         history: true,
-        center: true,
-        transition: 'default', // none/fade/slide/convex/concave/zoom
-        slideNumber: true,
+        center: false,
+        width: 1000,
+        pdfSeparateFragments: false,
+        transition: 'slide',
+        transitionSpeed: 'fast',
+        slideNumber: "c/t",
         highlight: {
           highlightOnLoad: false
         },
