--- a/Lecture_10_NLP/index.html
+++ b/Lecture_10_NLP/index.html
@@ -19,11 +19,12 @@
         <section data-markdown data-separator="<!--s-->" data-separator-vertical="<!--v-->">
           <textarea data-template>
             
+<p style="font-size: 16px; color: #999; margin:5px; position: absolute;"><a href="..">Homepage</a> | <a href="?print-pdf">Printable Version</a></p>
 <div style="display: flex; justify-content: center; align-items: center; height: 700px;">
   <div style="text-align: center; padding: 40px; background-color: white; border: 2px solid rgb(0, 63, 163); border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.1);">
     <h1 style="font-size: 48px; font-weight: bold; margin-bottom: 20px; color: #333;">SI100+ 2024 Lecture 10</h1>
     <p style="font-size: 24px; color: #666;">用文字回应你的期待——自然语言处理</p>
-    <p style="font-size: 16px; color: #999; margin-top: 20px;">SI100+ 2024 Staff | 2024-09-13</p>
+    <p style="font-size: 16px; color: #999; margin-top: 20px; margin-bottom:5px">SI100+ 2024 Staff | 2024-09-13</p>
   </div>
 </div>
 
