--- a/assets/reveal.html
+++ b/assets/reveal.html
@@ -1,126 +1,157 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>{{{title}}}</title>
-    {{#absoluteUrl}}
-    <meta property="og:title" content="{{{title}}}" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{{absoluteUrl}}}/featured-slide.jpg" />
-    <meta property="og:url" content="{{{absoluteUrl}}}" />
-    {{/absoluteUrl}}
-    <link rel="shortcut icon" href="{{{base}}}/favicon.ico" />
-    <link rel="stylesheet" href="{{{base}}}/dist/reset.css" />
-    <link rel="stylesheet" href="{{{base}}}/dist/reveal.css" />
-    <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
-    <link rel="stylesheet" href="{{{base}}}{{{highlightThemeUrl}}}" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    {{#cssPaths}}
-    <link rel="stylesheet" href="{{{.}}}" />
-    {{/cssPaths}} {{#watch}}
+  <title>{{{title}}}</title>
+  {{#absoluteUrl}}
+  <meta property="og:title" content="{{{title}}}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="{{{absoluteUrl}}}/featured-slide.jpg" />
+  <meta property="og:url" content="{{{absoluteUrl}}}" />
+  {{/absoluteUrl}}
+  <link rel="shortcut icon" href="{{{base}}}/favicon.ico" />
+  <link rel="stylesheet" href="{{{base}}}/dist/reset.css" />
+  <link rel="stylesheet" href="{{{base}}}/dist/reveal.css" />
+  <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
+  <link rel="stylesheet" href="{{{base}}}{{{highlightThemeUrl}}}" />
 
-    <script>
-      document.write(
-        '<script src="http://' +
-          (location.host || 'localhost').split(':')[0] +
-          ':35729/livereload.js?snipver=1"></' +
-          'script>'
-      );
-    </script>
-    {{/watch}}
-  </head>
-  <body>
-    <div class="reveal">
-      <div class="slides">
-        <section data-markdown {{{slidifyAttributes}}}>
-          <textarea data-template>
+  {{#cssPaths}}
+  <link rel="stylesheet" href="{{{.}}}" />
+  {{/cssPaths}} {{#watch}}
+
+  <script>
+    document.write(
+      '<script src="http://' +
+      (location.host || 'localhost').split(':')[0] +
+      ':35729/livereload.js?snipver=1"></' +
+      'script>'
+    );
+  </script>
+  {{/watch}}
+</head>
+
+<body>
+  <div class="reveal">
+    <div class="slides">
+      <section data-markdown {{{slidifyAttributes}}}>
+        <textarea data-template>
             {{{markdown}}}
           </textarea>
-        </section>
-      </div>
+      </section>
     </div>
+  </div>
 
-    <script src="{{{base}}}/dist/reveal.js"></script>
+  <script src="{{{base}}}/dist/reveal.js"></script>
 
-    {{#mermaidOptionsStr}}
-    <script src="{{{base}}}/mermaid/dist/mermaid.min.js"></script>
-    {{/mermaidOptionsStr}}
+  {{#mermaidOptionsStr}}
+  <script src="{{{base}}}/mermaid/dist/mermaid.min.js"></script>
+  {{/mermaidOptionsStr}}
 
-    <script src="{{{base}}}/plugin/markdown/markdown.js"></script>
-    <script src="{{{base}}}/plugin/highlight/highlight.js"></script>
-    <script src="{{{base}}}/plugin/zoom/zoom.js"></script>
-    <script src="{{{base}}}/plugin/notes/notes.js"></script>
-    <script src="{{{base}}}/plugin/math/math.js"></script>
-    <script>
-      function extend() {
-        var target = {};
-        for (var i = 0; i < arguments.length; i++) {
-          var source = arguments[i];
-          for (var key in source) {
-            if (source.hasOwnProperty(key)) {
-              target[key] = source[key];
-            }
+  <script src="{{{base}}}/plugin/markdown/markdown.js"></script>
+  <script src="{{{base}}}/plugin/highlight/highlight.js"></script>
+  <script src="{{{base}}}/plugin/zoom/zoom.js"></script>
+  <script src="{{{base}}}/plugin/notes/notes.js"></script>
+  <script src="{{{base}}}/plugin/math/math.js"></script>
+  <!-- Font awesome is required for the chalkboard plugin -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Custom controls plugin is used to for opening and closing annotation modes. -->
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js-plugins@latest/customcontrols/plugin.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js-plugins@latest/customcontrols/style.css">
+  <!-- Chalkboard plugin -->
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js-plugins@latest/chalkboard/plugin.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js-plugins@latest/chalkboard/style.css">
+  <script>
+    function extend() {
+      var target = {};
+      for (var i = 0; i < arguments.length; i++) {
+        var source = arguments[i];
+        for (var key in source) {
+          if (source.hasOwnProperty(key)) {
+            target[key] = source[key];
           }
         }
-        return target;
       }
+      return target;
+    }
 
-      // default options to init reveal.js
-      var defaultOptions = {
-        controls: true,
-        progress: true,
-        history: true,
-        center: false,
-        width: 1000,
-        pdfSeparateFragments: false,
-        transition: 'slide',
-        transitionSpeed: 'fast',
-        slideNumber: "c/t",
-        highlight: {
-          highlightOnLoad: false
-        },
-        plugins: [
-          RevealMarkdown,
-          RevealHighlight,
-          RevealZoom,
-          RevealNotes,
-          RevealMath.KaTeX,
+    // default options to init reveal.js
+    var defaultOptions = {
+      controls: true,
+      progress: true,
+      history: true,
+      center: false,
+      width: 1000,
+      pdfSeparateFragments: false,
+      transition: 'slide',
+      transitionSpeed: 'fast',
+      slideNumber: "c/t",
+      highlight: {
+        highlightOnLoad: false
+      },
+      plugins: [
+        RevealMarkdown,
+        RevealHighlight,
+        RevealZoom,
+        RevealNotes,
+        RevealMath.KaTeX,
+        RevealChalkboard,
+        RevealCustomControls,
+      ],
+      customcontrols: {
+        controls: [
+          {
+            icon: '<i class="fa fa-pen-square"></i>',
+            title: 'Toggle chalkboard (B)',
+            action: 'RevealChalkboard.toggleChalkboard();'
+          },
+          {
+            icon: '<i class="fa fa-pen"></i>',
+            title: 'Toggle notes canvas (C)',
+            action: 'RevealChalkboard.toggleNotesCanvas();'
+          }
         ]
-      };
+      },
+      chalkboard: {
+        // add configuration here
+      },
+    };
 
-      // options from URL query string
-      var queryOptions = Reveal().getQueryHash() || {};
+    // options from URL query string
+    var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {{{revealOptionsStr}}}, queryOptions);
-    </script>
+    var options = extend(defaultOptions, {{{ revealOptionsStr }}}, queryOptions);
+  </script>
 
-    {{#scriptPaths}}
-    <script src="{{{.}}}"></script>
-    {{/scriptPaths}}
+  {{#scriptPaths}}
+  <script src="{{{.}}}"></script>
+  {{/scriptPaths}}
 
-    <script>
-      Reveal.initialize(options);
-      Reveal.addEventListener('ready', function (event) {
-        const blocks = Reveal.getRevealElement().querySelectorAll('pre code:not(.mermaid)');
-        const hlp = Reveal.getPlugin('highlight');
-        blocks.forEach(hlp.highlightBlock);
-      });
-    </script>
+  <script>
+    Reveal.initialize(options);
+    Reveal.addEventListener('ready', function (event) {
+      const blocks = Reveal.getRevealElement().querySelectorAll('pre code:not(.mermaid)');
+      const hlp = Reveal.getPlugin('highlight');
+      blocks.forEach(hlp.highlightBlock);
+    });
+  </script>
 
-    {{#mermaidOptionsStr}}
-    <script>
-      const mermaidOptions = extend({ startOnLoad: false }, {{{mermaidOptionsStr}}});
-      mermaid.startOnLoad = false;
-      mermaid.initialize(mermaidOptions);
-      const cb = function (event) {
-        mermaid.init(mermaidOptions, '.stack.present > .present pre code.mermaid');
-        mermaid.init(mermaidOptions, '.slides > .present:not(.stack) pre code.mermaid');
-      }
-      Reveal.addEventListener('ready', cb);
-      Reveal.addEventListener('slidetransitionend', cb);
-    </script>
-    {{/mermaidOptionsStr}}
-  </body>
+  {{#mermaidOptionsStr}}
+  <script>
+    const mermaidOptions = extend({ startOnLoad: false }, {{{ mermaidOptionsStr }}});
+    mermaid.startOnLoad = false;
+    mermaid.initialize(mermaidOptions);
+    const cb = function (event) {
+      mermaid.init(mermaidOptions, '.stack.present > .present pre code.mermaid');
+      mermaid.init(mermaidOptions, '.slides > .present:not(.stack) pre code.mermaid');
+    }
+    Reveal.addEventListener('ready', cb);
+    Reveal.addEventListener('slidetransitionend', cb);
+  </script>
+  {{/mermaidOptionsStr}}
+</body>
+
 </html>
