--- a/Lecture_09_Transformation_of_models/Lecture_09_Transformation_of_models.html
+++ b/Lecture_09_Transformation_of_models/Lecture_09_Transformation_of_models.html
@@ -788,9 +788,10 @@
     // options from URL query string
     var queryOptions = Reveal().getQueryHash() || {};
 
-    var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_09_Transformation_of_models/Lecture_09_Transformation_of_models.md"],"static":"static/Lecture_09_Transformation_of_models","template":"./assets/reveal.html","preprocessor":"./assets/preproc.js","scripts":"assets/inject.js"}, queryOptions);
+    var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_09_Transformation_of_models/Lecture_09_Transformation_of_models.md"],"static":"static/Lecture_09_Transformation_of_models","template":"./assets/reveal.html","preprocessor":"./assets/preproc.js","scripts":"assets/menu/menu.js,assets/inject.js"}, queryOptions);
   </script>
 
+  <script src="./_assets/assets/menu/menu.js"></script>
   <script src="./_assets/assets/inject.js"></script>
 
   <script>
