--- a/Lecture_07_AI_Intro_and_Algorithms/Lecture_07_AI_Intro_and_Algorithms.html
+++ b/Lecture_07_AI_Intro_and_Algorithms/Lecture_07_AI_Intro_and_Algorithms.html
@@ -612,9 +612,10 @@
     // options from URL query string
     var queryOptions = Reveal().getQueryHash() || {};
 
-    var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_07_AI_Intro_and_Algorithms/Lecture_07_AI_Intro_and_Algorithms.md"],"static":"static/Lecture_07_AI_Intro_and_Algorithms","template":"./assets/reveal.html","preprocessor":"./assets/preproc.js","scripts":"assets/inject.js"}, queryOptions);
+    var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_07_AI_Intro_and_Algorithms/Lecture_07_AI_Intro_and_Algorithms.md"],"static":"static/Lecture_07_AI_Intro_and_Algorithms","template":"./assets/reveal.html","preprocessor":"./assets/preproc.js","scripts":"assets/menu/menu.js,assets/inject.js"}, queryOptions);
   </script>
 
+  <script src="./_assets/assets/menu/menu.js"></script>
   <script src="./_assets/assets/inject.js"></script>
 
   <script>
