deploy: d190aa4afb7bc778301f84bdaeb6ab831d3c700b

--- a/Lecture_10_NLP/Lecture_10_NLP.html
+++ b/Lecture_10_NLP/Lecture_10_NLP.html
@@ -98,14 +98,14 @@ GNMT(Google Neural Machine Translation)
 
 <!-- ## 其他流派
 
-- <span> 语音识别: 将口语转换为书面文本 </span> <!-- .element: class="fragment" -->
-    - <span> 任务: 语音转文本、语音分析、语音生成 </span> <!-- .element: class="fragment" -->
-    - <span> 应用: 语音助手、自动翻译电话、无障碍沟通技术 </span> <!-- .element: class="fragment" -->
-- <span> 强化学习: 关注如何通过奖励和惩罚机制指导代理（agent）学习策略。 </span> <!-- .element: class="fragment" -->
-    - <span> 任务: 策略优化、环境交互、奖励机制设计 </span> <!-- .element: class="fragment" -->
-    - <span> 应用: 游戏AI、机器人控制、自动化交易系统 </span> <!-- .element: class="fragment" -->
-- <span> 生成对抗网络（Generative Adversarial Networks, GANs）: 由生成器和判别器组成的模型框架，用于生成接近真实数据的假数据。 </span> <!-- .element: class="fragment" -->
-    - <span> 任务： 图像生成、图像超分辨率、数据增强。 </span> <!-- .element: class="fragment" -->
+- 语音识别: 将口语转换为书面文本
+    - 任务: 语音转文本、语音分析、语音生成
+    - 应用: 语音助手、自动翻译电话、无障碍沟通技术
+- 强化学习: 关注如何通过奖励和惩罚机制指导代理（agent）学习策略。
+    - 任务: 策略优化、环境交互、奖励机制设计
+    - 应用: 游戏AI、机器人控制、自动化交易系统
+- 生成对抗网络（Generative Adversarial Networks, GANs）: 由生成器和判别器组成的模型框架，用于生成接近真实数据的假数据。
+    - 任务： 图像生成、图像超分辨率、数据增强。
     - <span> 应用： 图像合成、虚拟现实、艺术创作。 --> </span> <!-- .element: class="fragment" -->
 
 <!--v-->
