--- a/Lecture_10_NLP/index.html
+++ b/Lecture_10_NLP/index.html
@@ -81,7 +81,7 @@ GNMT(Google Neural Machine Translation)
 
 - <span> 很多翻译软件中也自带了朗读功能，这就是语音合成技术的应用。对于语音合成，一个简单直接的方法是将文本逐字（单词）地拆分，然后通过查表的方式找到对应的音素（音位）或音频片段，最后将这些音素或音频片段拼接起来，形成连贯的语音。但这种方法的效果并不好，因为不同的语气（例如疑问句、陈述句）和语境会导致句子中的音调、语速等发生变化，而这些变化是通过简单的查表方式无法捕捉到的。 汉字存在的多音字，也让规则变得极为复杂。 </span> <!-- .element: class="fragment" -->
 
-
+<!--v-->
 
 ## 计算机视觉（CV, Computer Vision）
 
@@ -93,8 +93,6 @@ GNMT(Google Neural Machine Translation)
     - <span> 人脸识别（Face Recognition）： 识别并确认图像或视频中的人脸。 </span> <!-- .element: class="fragment" -->
     - <span> 目标检测/追踪（Object Detection&Tracking）： 找出图像中的目标及其位置。 </span> <!-- .element: class="fragment" -->
     - <span> 语义分割（Semantic Segmentation）： 将图像划分为具有不同语义的区域。 </span> <!-- .element: class="fragment" -->
-
-<!--v-->
 
 <!-- ## 其他流派
 
@@ -125,16 +123,22 @@ GNMT(Google Neural Machine Translation)
 
 ## NLP 的异军突起
 
-<div style="column-count: 2">
+<div class="row">
+
+<div class="col">
 
 - <span> 基于Transformer的 **语言模型** 如BERT、GPT系列、T5等，迅速成为NLP的主流技术。 </span> <!-- .element: class="fragment" -->
 - <span> 这些模型大幅提升了各类NLP任务的表现，从文本分类、机器翻译，到问答系统和文本生成。 </span> <!-- .element: class="fragment" -->
 - <span> 更可怕的是…… </span> <!-- .element: class="fragment" -->
 - <span> Transformer不止局限于NLP，也开始在**计算机视觉、语音处理等**领域展现出强大的通用性和适用性。 </span> <!-- .element: class="fragment" -->
 
-<!-- <img src="./image-1.png" width="500"/> -->
+</div>
+
+<div class="col">
+
 ![蛙蛙抱怨|380](image-1.png) <!-- .element: class="fragment" -->
 
+</div>
 </div>
 
 <!--s-->
@@ -168,26 +172,58 @@ GNMT(Google Neural Machine Translation)
 
 ## 一些数学...
 
-- <span> 在理解现代NLP（尤其是神经网络方法）时，线性代数是一个重要的工具，因为想要借助神经网络或者概率模型来处理自然语言，就必须要把一个一个的文字转化成可以被计算的数字。就像我们可以用 1 到 26 来表示字母，将文字转化为数字，就是 NLP 的第一步。 </span> <!-- .element: class="fragment" -->
+- <span> 在理解现代NLP（尤其是神经网络方法）时，线性代数是一个重要的工具，因为想要借助神经网络或者概率模型来处理自然语言，就必须要把一个一个的文字转化成可以被计算的数字。就像我们可以用 1 到 26 来表示字母，**将文字转化为数字**，就是 NLP 的第一步。 </span> <!-- .element: class="fragment" -->
+- <span> 但是，这样 1 到 26 的表示方法是不够的，因为 **我们的文字是有意义的**，而字母只是一种符号，即使是现在最庞大的神经网络，也难以用这样的符号来学习到文字的意义。所以，我们需要一种更加有语意的表示方法，这就是 **向量** </span> <!-- .element: class="fragment" -->
 
-- <span> 但是，这样 1 到 26 的表示方法是不够的，因为我们的文字是有意义的，而这种表示方法只是一种符号，即使是现在最庞大的神经网络，也难以用这样的符号来学习到文字的意义。所以，我们需要一种更加有语意的表示方法，这就是向量。 </span> <!-- .element: class="fragment" -->
+<!--v-->
 
-- <span> 怎样在数学中蕴含语意呢？我们中学时都学过向量（Vector）的概念，向量是一个有方向和大小的量，可以用来表示空间中的一个点。如果我们把每一个单词视作为一个点，把单词投射到一个二维平面。并且我们规定，语义上相近的单词在这个平面上的距离也要相近。这样，我们就可以用一个向量来表示一个单词，这个向量就是这个单词的词向量（Word Embedding）。 </span> <!-- .element: class="fragment" -->
+## 在数学中蕴含语意
 
-- <span> 这样的表示方法，就使得点的坐标也带有了意义。举个例子，把食物的词汇投射到二维平面，并且我们规定越往X轴正方向的单词越甜，越往X轴负方向的单词越苦；越往Y轴正方向的单词越硬，越往Y轴负方向的单词越软。那么，我们就可以某个第一象限的点表示“苹果”，某个第二象限的点表示“蛋糕”，某个第三象限的点表示“苦瓜”，某个第四象限的点表示“冰淇淋”。并且根据定义，我们知道“苹果”和“梨子”在这个平面上的距离要比“苹果”和“苦瓜”要近。 </span> <!-- .element: class="fragment" -->
+- <span> 怎样在数学中蕴含语意呢？ </span> <!-- .element: class="fragment" -->
+- <span> 我们中学时都学过向量（Vector）的概念，向量是一个有方向和大小的量，可以用来表示空间中的一个点。 </span> <!-- .element: class="fragment" -->
+- <span> 如果我们把每一个单词视作为一个点，把单词投射到一个二维平面。并且我们规定，**语义上相近的单词在这个平面上的距离也要相近**。这样，我们就可以用一个向量来表示一个单词，这个向量就是这个单词的 **词向量（Word Embedding）**。 </span> <!-- .element: class="fragment" -->
+- <span> 这样的表示方法，就使得点的坐标也带有了意义。 </span> <!-- .element: class="fragment" -->
 
-- <span> 我们先不要管我们是如何将单词投射到这个平面上的（马上会讲到），我们先来关注这样的表示方法有哪些奇妙的性质。首先，我们可以看到，意思相近的单词在这个平面上的距离也是相近的，那么机器在学习这样的表示方法时，就可以通过这个距离来判断两个单词的语义相似度，从而更好地理解自然语言。其次，我们可以注意到，坐标轴也是有语意的！也就是说，二维空间上的两根坐标轴分别表示了甜的程度和硬的程度，而如果将这个空间扩展到三维，我们就可以新增一个维度，比如表示酸的程度，这样我们就有了更加丰富的语意表示。依此类推，我们可以将这个空间扩展到一个很高的纬度，从而将丰富的语意信息编码到这个向量中。 </span> <!-- .element: class="fragment" -->
+<!--v-->
 
-- <span> 那么如果我们能够通过某种算法，让机器自动地将单词投射到一个高维的空间中，使得这个空间中的点的坐标带有语意，那么我们就可以用这个向量来表示单词，这就是词向量的基本思想。 </span> <!-- .element: class="fragment" -->
+## 举个例子
 
+![坐标|300](image-2.png)
+
+- <span> 把食物的词汇投射到二维平面，并且我们规定越往X轴正方向的单词越甜，越往X轴负方向的单词越苦；越往Y轴正方向的单词越硬，越往Y轴负方向的单词越软。 </span> <!-- .element: class="fragment" -->
+- <span> 那么，我们就可以某个第一象限的点表示“苹果”，某个第二象限的点表示“苦瓜”，某个第三象限的点表示“可可”，某个第四象限的点表示“蛋糕”。并且根据定义，我们知道“苹果”和“梨子”在这个平面上的距离将要比“苹果”和“苦瓜”要近。 </span> <!-- .element: class="fragment" -->
+
+
+<!--v-->
+
+## 举个例子 (cont'd)
+
+![坐标|200](image-2.png)
+
+- <span> 我们先不要管我们是如何将单词投射到这个平面上的（马上会讲到），我们先来关注这样的表示方法有哪些奇妙的性质。 </span> <!-- .element: class="fragment" -->
+- <span> 首先，我们可以看到，意思相近的单词在这个平面上的距离也是相近的 </span> <!-- .element: class="fragment" -->
+    - <span> 那么机器在学习这样的表示方法时，就可以通过这个 **距离** 来判断两个单词的 **语义相似度**，从而更好地理解自然语言。 </span> <!-- .element: class="fragment" -->
+- <span> 其次，我们可以注意到，**坐标轴也是有语意的**！ </span> <!-- .element: class="fragment" -->
+    - <span> 也就是说，二维空间上的两根坐标轴分别表示了甜的程度和硬的程度，而如果将这个空间扩展到三维，我们就可以新增一个维度，比如表示酸的程度，这样我们就有了更加丰富的语意表示。依此类推，我们可以将这个空间 **扩展到一个很高的纬度**，从而将丰富的语意信息编码到这个向量中。 </span> <!-- .element: class="fragment" -->
+
+<!--v-->
+
+## 举个例子 (cont'd)
+
+- <span> 那么如果我们能够通过某种算法，让机器 **自动地将单词投射到一个高维的空间中**，使得这个空间中的点的坐标带有语意，那么我们就可以用这个向量来表示单词，这就是词向量的基本思想。 </span> <!-- .element: class="fragment" -->
 - <span> 那么，我们是如何将单词投射到这个平面上的呢？这就是我们要讲的词向量的训练方法，其中最著名的就是 word2vec </span> <!-- .element: class="fragment" -->
+
 <!--v-->
 
 ## word2vec
 
-- <span> word2vec 是 Google 在 2013 年提出的一种词向量训练方法，它的核心思想是通过神经网络来学习单词的词向量。它基于一个很朴素的想法：在文本中，越是经常出现在一起的单词，它们的语义越相近。比如说，句子中有“小猪爱吃苹果和梨子”，那么我们就知道“小猪”、“苹果”和“梨子”存在某种联系，比如“小猪”和“苹果”可能是主语和宾语的关系，而“苹果”和“梨子”可能是同义词。那么，我们就可以通过这种关系来学习单词的词向量。 </span> <!-- .element: class="fragment" -->
-
-- <span> word2vec 首先收集了大量的文本数据，然后将句子中的任意两个单词两两组合，作为训练样本。对于每一个训练样本，word2vec 会通过神经网络来预测这两个单词之间的关系，具体来说，就是预测这两个单词之间的距离。如果两个单词在文本中经常出现在一起，那么它们之间的距离就会很小；反之，如果两个单词很少在一起出现，那么它们之间的距离就会很大。通过这种方式，word2vec 就可以学习到单词的词向量。 </span> <!-- .element: class="fragment" -->
+- <span> word2vec 是 Google 在 2013 年提出的一种词向量训练方法，它的核心思想是 **通过神经网络来学习单词的词向量**。 </span> <!-- .element: class="fragment" -->
+- <span> 它基于一个很朴素的想法：在文本中，**越是经常出现在一起的单词，它们的语义越相近**。 </span> <!-- .element: class="fragment" -->
+- <span> 比如说，句子中有“小猪爱吃苹果和梨子”，那么我们就知道“小猪”、“苹果”和“梨子”存在某种联系，比如“小猪”和“苹果”可能是主语和宾语的关系，而“苹果”和“梨子”可能是同义词。那么，我们就可以通过这种关系来学习单词的词向量。 </span> <!-- .element: class="fragment" -->
+- <span> word2vec 首先收集了大量的文本数据，然后将句子中的任意两个单词两两组合，作为训练样本。 </span> <!-- .element: class="fragment" -->
+- <span> 对于每一个训练样本，word2vec 会通过神经网络来预测这两个单词之间的关系，具体来说，就是预测这两个单词之间的距离。 </span> <!-- .element: class="fragment" -->
+    - <span> 如果两个单词在文本中经常出现在一起，那么它们之间的距离就会很小；反之，如果两个单词很少在一起出现，那么它们之间的距离就会很大。 </span> <!-- .element: class="fragment" -->
+- <span> 通过这种方式，word2vec 就可以学习到单词的词向量。 </span> <!-- .element: class="fragment" -->
 
 <!--s-->
 
